--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "4.17.1",
-    "sequelize": "^6.23.0",
-    "sqlite3": "^5.0.0"
+    "body-parser": "^1.20.3",
+    "express": "4.21.1",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7"
   },
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "seed": "node ./scripts/seedDb.js",
+    "test": "jest --detectOpenHandles"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   },
   "engines": {
-    "node": ">=10.16.3"
+    "node": ">=20.12.0"
   },
   "engineStrict": true
 }
