--- a/package.json
+++ b/package.json
@@ -3,21 +3,47 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/sequelize": "^10.0.0",
     "body-parser": "^1.20.3",
     "express": "4.21.1",
     "sequelize": "^6.37.5",
-    "sqlite3": "^5.1.7"
+    "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.7",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1"
   },
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
     "seed": "node ./scripts/seedDb.js",
-    "test": "jest --detectOpenHandles"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:e2e": "jest --config ./test/jest-e2e.json --forceExit"
   },
   "devDependencies": {
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/sequelize": "^4.28.15",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
     "jest": "^29.7.0",
-    "supertest": "^6.3.4"
+    "prettier": "^3.0.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   },
   "engines": {
     "node": ">=20.12.0"
