--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,40 @@
+# Dependency directories
 node_modules/
-coverage/
-.env
-database.sqlite3
+
+# Build output
 dist/
+build/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# SQLite database
+*.sqlite
+*.sqlite3
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Test coverage
+coverage/
+
+# Temporary files
+tmp/
+temp/
+
