git commit -m "chore(config): setup test environment and jobs module
Following TDD approach:

Test Configuration:
- Updated Jest config for proper TypeScript handling
- Added separate unit and e2e test configurations
- Fixed module path resolution
- Added proper test environment setup

Jobs Module Setup:
- Added JobsModule with proper imports
- Created JobsController structure
- Implemented JobsService with tests
- Added proper TypeScript paths

Technical Details:
- Configured ts-jest transformer
- Added module aliases
- Setup proper test matching patterns
- Added jobs module structure

Part of TDD cycle: Setting up test infrastructure
Preparing for: GET /jobs/unpaid endpoint implementation"

--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "seed": "node ./scripts/seedDb.js",
-    "test": "jest --config jest.config.ts",
+    "test": "jest --config jest.config.ts --projects ./jest.config.ts",
+    "test:unit": "jest --config jest.config.ts --selectProjects unit --verbose",
+    "test:e2e": "jest --config jest.config.ts --selectProjects e2e --verbose --runInBand",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json --forceExit"
+    "test:cov": "jest --coverage"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
