--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
     "body-parser": "^1.20.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "express": "4.21.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
-    "sqlite3": "^5.1.7",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "sqlite3": "^5.1.7"
   },
   "scripts": {
     "build": "nest build",
@@ -38,8 +40,8 @@
     "@types/node": "^20.3.1",
     "@types/sequelize": "^4.28.15",
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22",
     "jest": "^29.7.0",
+    "nodemon": "^2.0.22",
     "prettier": "^3.0.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.0",
